[package]
name = "hello-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
tokio = { version = "1.32.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = { version = "0.18.0", features = ["rand", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
pollster = "0.3.0"
anyhow = "1.0.75"
cfg-if = "1.0.0"
tobj = "4.0.0"
rayon = "1.8.0"
image = "0.24.7"
